Fix remote window occlusion tracking

- Add a kClientWindowHasContent property to pass the info
  from client to Window Service;
- DesktopWindowTreeHostMus sets the property based on layer type
  and opacity of Widget::InitParams;
- Check kClientWindowHasContent property as part of the remote
  window has-content check for occlusion tracking;

Bug: 908629
Change-Id: I23c582d7135d50b70ba0776cb0368da59fe5d8c7
Reviewed-on: https://chromium-review.googlesource.com/c/1354439
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612773}
Former-commit-id: bdffcf67c196f1799e5aff5f7ced62a02bd87353